# Atlas

./: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yaml  nightley.yml
Tickets/: Week1.md
cpp/: CMakeLists.txt
cpp/src/: Engine.cpp  Engine.hpp  FileLoader.cpp  FileLoader.hpp  main.cpp
cpp/tests/: CMakeLists.txt
